--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-dialoguer = "0.10"
+tokio = { version = "1.17", features = ["full"] }
+warp = "0.3"
